Use prettier formatting rules, add dot files

--- a/views/logged-in.ejs
+++ b/views/logged-in.ejs
@@ -16,8 +16,8 @@
 
     <script>
       const logout = () => {
-        fetch("/logout", {
-          method: "POST",
+        fetch('/logout', {
+          method: 'POST',
         }).then((response) => {
           // check for auth failure for other reasons
           if (response.status !== 200) {
@@ -26,17 +26,17 @@
           }
 
           // logout successful, redirect to login
-          window.location.href = "/login";
+          window.location.href = '/login';
         });
       };
 
-      const submit = document.getElementById("logout");
-      submit.addEventListener("click", (e) => {
+      const submit = document.getElementById('logout');
+      submit.addEventListener('click', (e) => {
         e.preventDefault();
         logout();
       });
 
-      const host = document.getElementById("host");
+      const host = document.getElementById('host');
       host.innerText = window.location.host;
     </script>
   </body>
