--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,9 +17,9 @@
     <script>
       // post password to /auth
       const login = (password) => {
-        fetch("/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
+        fetch('/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ password }),
         })
           .then((response) => {
@@ -35,36 +35,36 @@
           .then((data) => {
             // console.log("data", data);
 
-            if (data && data.status === "ok") {
+            if (data && data.status === 'ok') {
               // auth success, cookie should be set
-              window.location.href = "/logged-in";
+              window.location.href = '/logged-in';
               return;
             }
 
             // auth failure, give feedback to user
-            const message = document.getElementById("message");
-            message.innerText = "Authorisation attempt failed";
+            const message = document.getElementById('message');
+            message.innerText = 'Authorisation attempt failed';
           });
       };
 
       // handle password text field
-      const input = document.getElementById("password");
+      const input = document.getElementById('password');
       input.focus();
-      input.addEventListener("keyup", (e) => {
+      input.addEventListener('keyup', (e) => {
         e.preventDefault();
-        if (e.key === "Enter") {
+        if (e.key === 'Enter') {
           const password = input.value;
-          input.value = ""; // clear input
+          input.value = ''; // clear input
           login(password);
         }
       });
 
       // handle submit / login button
-      const submit = document.getElementById("login");
-      submit.addEventListener("click", (e) => {
+      const submit = document.getElementById('login');
+      submit.addEventListener('click', (e) => {
         e.preventDefault();
         const password = input.value;
-        input.value = ""; // clear input
+        input.value = ''; // clear input
         login(password);
       });
     </script>
