--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,6 +1,2 @@
-<link rel="stylesheet" href="/css/skeleton.css" />
-<link
-  href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII="
-  rel="icon"
-  type="image/x-icon"
-/>
+<link rel="stylesheet" href="/auth_style.css" />
+<link rel="icon" href="/auth_padlock.svg" type="image/svg+xml" />
